# Changelog (dd/mm/yy)

## (20/12/25)

· 👌 IMPROVE: Games > OpenBor v4.0 for aarch64.

## (12/12/25)

· 👌 IMPROVE: Others > UXPlay (Airplay Mirroring) for aarch64.

## (30/11/25)

· 👌 IMPROVE: Emulators > RetroArch 1.20.0 (cores supported: SNES9x, Genesis Plus GX, mGBA, Nestopia, DeSmuME).

· 👌 IMPROVE: Games > JFDuke3D (Duke Nukem 3D) for aarch64 (replacing Eduke32).

## (22/11/25)

· 👌 IMPROVE: Games > OpenMW (Elders Scroll Morrowind) v0.51 for aarch64.

· 👌 IMPROVE: Games > Shadow Warrior for aarch64.

## (10/11/25)

· 👌 IMPROVE: Games > Hurrican (Turrican clone) for aarch64.

## (01/11/25)

· 👌 IMPROVE: Games > Hexen2 (latest compilation 2025-11-01).

## (12/10/25)

· 👌 IMPROVE: Games > Heroes Of Might And Magic II 1.11.1.

· ❌ REMOVE: Games > Heroes Of Might And Magic III.

· ❌ REMOVE: Games > Hermes (Obsolete).

## (11/10/25)

· 📦 ADD: Games > OpenFodder (AKA Cannon Fodder).

· 🐛 FIX: Games > Crispy-Doom (Adjust data extraction path)

· ❌ REMOVE: Config > Vulkan 25.2.4 .

· ❌ REMOVE: Games > 2Ship2Harkinian.

· ❌ REMOVE: Games > Alien Vs Predator.

· ❌ REMOVE: Games > Diablo 2 with wine.

· ❌ REMOVE: Games > GTA.

· ❌ REMOVE: Games > GemRB.

## (05/09/25)

· 🐛 FIX: Games > 2Ship2Harkinian.

· 🐛 FIX: Games > Blake Stone.

· 🐛 FIX: Games > Deathrace (AKA Carmageddon).

· ❌ REMOVE: Games > Zandronum (AKA DooM port). Obsolete.

## (14/08/25)

· 📦 ADD: Games > Dominatrix (Sin Gold).

## (04/08/25)

· 📦 ADD: Games > Space Cadet Pinball (3D Pinball for Windows - Space Cadet).

## (25/07/25)

· 📦 New: Devs > Gemini CLI.

## (06/07/25)

· 👌 IMPROVE: Config > Vulkan 25.1.4 & libdrm-2.4.125.

## (01/06/25)

· 📦 New: Games > 2 Ship 2 Harkinian (Free port of The Legend of Z3lda: Ocarina of Time.)

## (24/05/25)

· 👌 IMPROVE: Config > Vulkan 25.1.1 & libdrm-2.4.124.

· 👌 IMPROVE: Improve helper call.

· 🐛 FIX: Games > Half Life 2 (Source Engine)

· 🐛 FIX: Games > Portal

## (03/05/25)

· 👌 IMPROVE: Emulators > Picodrive 2.0.4 for aarch64.

## (29/04/25)
