@@ -4,7 +4,7 @@
 
 <p align="center">
  <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ulysess%40gmail%2ecom&lc=GB&item_name=PiKISS&currency_code=EUR&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted"><img src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" /></a>
- <a href='https://ko-fi.com/cerrejon' target='_blank'><img height="20" src="https://az743702.vo.msecnd.net/cdn/kofi2.png?v=0" alt='Buy Me a Coffee at ko-fi.com' /></a>
+ <a href='https://ko-fi.com/A838QJC' target='_blank'><img height='22' style='border:0px;height:22px;' src='https://storage.ko-fi.com/cdn/kofi2.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
  <a href="https://github.com/jmcerrejon/neighborhood-games/blob/master/LICENSE"><img src="https://img.shields.io/github/license/jmcerrejon/neighborhood-games" alt="npm version"></a>
  <a href="https://x.com/ulysess10"><img src="https://img.shields.io/twitter/follow/ulysess10?style=social" alt="Follow me on X!"></a>
  <a href="https://github.com/jmcerrejon/PiKISS/search?l=shell"><img src="https://img.shields.io/github/languages/top/jmcerrejon/pikiss" alt="language top"></a>
@@ -13,7 +13,7 @@
 
 ## ⏰ Estimated hours of work so far
 
--   **1315 hours**
+-   **1316 hours**
 
 ## 💰 Total amount donated by users & sponsors
 
@@ -78,6 +78,10 @@ curl -sSL https://git.io/JfAPE | bash
 ![piKiss_04](screenshots/pikiss_twisterOS_04.png)
 
 ### [ ChangeLog (dd/mm/yy)]
+
+### (21/12/25)
+
+· 👌 IMPROVE: Games > Hexen2, Hurrican, OpenBOR, OpenFodder, Source (HL/Portal), Space Cabinet move binary URLs.
 
 ### (20/12/25)
 
