@@ -1,5 +1,9 @@
 # Changelog (dd/mm/yy)
 
+## (21/12/25)
+
+· 👌 IMPROVE: Games > Hexen2, Hurrican, OpenBOR, OpenFodder, Source (HL/Portal), Space Cabinet move binary URLs.
+
 ## (20/12/25)
 
 · 👌 IMPROVE: Games > OpenBor v4.0 for aarch64.
